styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
@font-face {
    font-family: 'futura';
    src: url('/futura.ttf') format('truetype');
}

@font-face {
    font-family: 'Firacode';
    src: url('/firacode.ttf') format('truetype');
}


:root {
    /* Text Colors */
    --light-text: #ECEFF4;
    --dark-text: #D8DEE9;
    --mid-text: #E5E9F0;
    /* Theme Colors */
    --frost4: #5E81AC;
    --frost3: #81A1C1;
    --frost2: #88C0D0;
    --frost1: #8FBCBB;
    --background-color: var(--darknord);
    --card-background: var(--nord0);
    /* Size */
    --small-text: 0.875rem;
    --mini-text: 0.65rem;

    /* Theme Colors */

    --darknord:#242933;
    --nord0: #2E3440;
    --nord1: #3B4252;
    --nord2: #434C5E;
    --nord3: #4C566A;


}

/* Reset CSS */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

a {
    text-decoration: none;
}

/* Global Styles */

body {
    background-color: var(--background-color);
    font-family: 'Open Sans';
   
}

::-webkit-scrollbar {
    background: var(--nord0);
    width: 0.9rem;
}

::-webkit-scrollbar-thumb {
    background: var(--nord1);
}



img {
    max-width: 100%;
}

h1 {
    font-size: 2.25rem;
    font-weight: 500;
    color: white;
}

h2 {
    font-size: 2rem;
    color: white;
}



h3 {
    font-size: 1.5rem;
    font-weight: 400;
    color: var(--light-text);
}

h4 {
    font-size: 1.25rem;
    font-weight: 600;
    line-height: 1.7rem;
    font-family: Montserrat;
}

p {
    font-size: 1rem;
}

code {
    font-family: Firacode;
    line-height: 1.5rem;
    border-radius: 0.4rem;
    font-size: 0.8rem;
    margin-bottom: 1rem;
}

/* Reusable Classes */

.container {
    max-width: 45rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}


h1.home-title {
    font-size: 2.7rem;
}

p.dark-text {
    color: var(--dark-text);
    line-height: normal;
}

p.mid-text {
    color: var(--mid-text);
}

p.light-text {
    color: var(--light-text);
}

p.highlight-text {
    color: white;
}



p.frost-text {
    color: var(--frost2);
    font-size: var(--small-text);
    font-weight: 600;
    font-family: Montserrat;
}


p.mid-mini-text {
    color: var(--mid-text);
    font-size: var(--small-text);
    font-weight: 400;
}

p.date {
    color: #88c0d0b2;
    font-size: var(--mini-text);
    position: relative;
    left: -1rem;
}


h4.light-title {
    color: var(--light-text);
}

h4.mid-title {
    color: var(--mid-text);
}

h4.dark-title {
    color: var(--mid-text);
}

h3.bold{
    font-weight: 700;
    font-size: 1.4rem;
    font-family: Montserrat;
    color: var(--dark-text);

}

.flex-col {
    display: flex;
    flex-direction: column;
}

.flex {
    display: flex;
    gap: 0.5rem;
}


.small-line {
    height: 1px;
    width: 8rem;
    background-color: var(--frost2);
}

.dark-line {
    height: 1px;
    width: 8rem;
    background-color: #88c0d07c;
}

p.arrow {
    font-size: 1.2rem;
}


.more-button {
    display: inline-flex;
    gap: 0.5rem;
    align-items: center;
    transition: 0.1s;
    border-radius: 0.3rem;
    padding: 0.3rem 0;
    padding: 1rem 1rem;
    line-height: 0;
    color: var(--frost2) !important;
    border: 1px solid var(--nord1);



}

.more-button:hover {
    border: 1px solid var(--nord3);


}

.more-button:hover p {
    color: var(--mid-text);
}

.page-title {
    border-bottom: 2px solid var(--nord1);
    padding-bottom: 1rem;
    margin: 3rem 0;
}

.flex-col-end {
    align-self: flex-end;
}

.mdx-body p {
    margin-bottom: 1.5rem;
}

/* Nav and Footer Styles */
main{
    flex: 1;
}


nav {
    display: flex;
    justify-content: flex-end;
    gap: 1rem;
    padding: 1.5rem 0;
    margin-right: 2rem;
    position: relative;
    z-index: 2;
}


p.nav-active {
    color: white;
    background-color: var(--card-background) !important;

    
}

p.nav-item {
    padding: 0.3rem 0.8rem;
    line-height: normal;
    border-radius: 0.4rem;
    transition: 0.2s background-color;
    background-color: transparent;
}

p.nav-item:hover {
    background-color: var(--card-background);
}

footer {
    display: flex;
    justify-content: center;
    padding: 1rem;
    margin-top: 2rem;
}

/* Home Styles */

.home-personal {
    margin: 5rem 0;
    gap: 1.5rem;
}

.hero-section {
    align-items: center;
    gap: 1rem;
    margin-left: 1rem;
}

.hero-img {
    background-color: var(--nord1);
    display: block;
    width: 4.5rem;
    height: 4.5rem;
    border-radius: 50%;
}

.hero-details {
    max-width: 20rem;
}

.hero-details p {
    line-height: 2rem;
}

.hero-details a {
    color: var(--frost2);
    text-decoration: underline ;
}

.personal-links {
    display: flex;
    align-items: center;
    gap: 1vw;
    margin: 0 auto;
    padding-top: 3rem;
   
}

.personal-links-icon {
    display: flex;
    gap: 0.5rem;
}

.blog-post-card {
    gap: 0.8rem;
    border-left: 1px solid var(--nord1);
    padding-left: 1.5rem;
}


.effect {
    transition: 0.2s;
}

.card-effect:hover  div.dark-line {
    background-color: var(--frost2);
}

.card-effect:hover  h4 {
    color: var(--light-text);
}

.card-effect:hover  h3 {
    color: var(--light-text);
}


.card-effect:hover  p.dark-text {
    color: var(--mid-text);
}

.card-effect:hover > p.date {
}

.card-effect:hover p.mid-text {
    color: var(--light-text);
}

.home-newest {
    gap: 2.5rem;
    margin-bottom: 4rem;
}

.project-card {
    gap: 0.5rem;
    padding: 1.5rem;
    border-radius: 0.6rem;
    background-color: var(--card-background);
}

.project-mobile {
    gap: 1.5rem;
}

.home-project-content {
    gap: 0.5rem;
}

.home-project-tag p{
    font-size: 0.95rem !important;
}

.project-card-content-container {
    width: 50%;
    gap: 1rem;
    justify-content: center;
}

.projects-page-wrapper {
    gap: 2rem;
}

.project-img {
    width: 50%;
    
}

.project-img img{
    width: 100%;
    object-fit: cover;

}

.github-icon:hover path.github-inner {
    fill: #a41cfe;
}

.github-icon:hover path.github-outer{
    fill: #a41cfeb2;
    filter:blur(1px)

}


.linkedin-icon:hover path.linkedin-inner {
    fill: #0193e2;
}

.linkedin-icon:hover path.linkedin-outer{
    fill: #0173b1a6; 
    filter:blur(1px)

}


.twitter-icon:hover path.twitter-inner {
    fill: #1d9bf0;
}

.twitter-icon:hover path.twitter-outer{
    fill: #1d9cf0b7; 
    filter:blur(1px)

}



/* Blogpost Styles */

article {
    margin-top: 2rem;
}

article  p {
    color: var(--mid-text);
    line-height: 1.4rem;
}

.blogpost-info {
    margin: 1.5rem 0;
    display: flex;
    gap: 1rem;
}

p.post-info {
    font-size: 0.9rem;
    color: var(--dark-text);
}


/* Project Styles */

article.project {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

p.tech-tag {
    padding: 0.2rem 1rem;
    border-radius: 50px;
    font-size: 0.9rem;
    color: white;
    background-color: transparent;
    border: 1px solid transparent;
    border-color: var(--dark-text);
}

p.CSS {
    color: #016fb9;
    border-color: #016fb9;
}

p.JavaScript {
    color: #f7de1f;
    border-color: #f7de1f;
}

p.React {
    color: #55cef0;
    border-color: #55cef0;
}

p.HTML {
    color: #e44a24;
    border-color: #e44a24;
    
}

.button {
    background-color: var(--card-background);
    padding: 0.5rem 1.5rem;
    border-radius: 50px;
    display: inline;
}

@media screen and (max-width: 800px){
    .container {
        margin-inline: 5%;
    }

    nav {
        justify-content: center;
        margin: 0;
    }

    .home-personal {
        margin-top: 3rem;
    }

    .small-line {
        width: 5rem;
    }

    p.post-info {
        font-size: calc(0.4rem + 1vw)
    }

    
    .blogpost-info {
        gap: 0.5rem;
    }

}

@media screen and (max-width: 600px) {
    
    .project-mobile {
        display: flex;
        flex-direction: column;
    }

    .project-img {
        width: 100%;
    }

    .project-card-content-container {
        width: 100%;
    }

    footer  p {
        font-size: 0.8rem !important;
    }

    .home-project-tag {
        display: none;
    }

    .hero-img {
        width: 3rem;
        height: 3rem;
    }

    .work-container {
        flex-direction: column;
        position: relative;
        justify-content: flex-start !important;
    }

    .work-details {
        width: auto !important;
        margin-top: 1rem;
    }

    .works-web {
        display: none;
    }

    .works-mobile {
        display: block !important;
    }

    .works-mobile summary {
        margin-bottom: 1rem;
    }

    .works-mobile summary::marker {
        content: '';
    }

    .frost-mobile::after {
        content: url('/icons/angle.svg');
        position: absolute;
       top: -0.4rem;
       transition: 0.2s;
       padding-left: 0.5rem;
    }

    details[open].works-mobile p.frost-mobile::after {
        transform: rotate(180deg);
    }

    .frost-web {
        display: none;
    }
}

@media screen and (max-width: 310px) {

    .blogpost-info {
        flex-wrap: wrap;
        row-gap: 0;
    }

    footer p {
        font-size: 0.6rem !important;
    }

  

}

@media screen and (max-width: 400px) {
    .hero-section p{
        font-size: 0.8rem !important;
        line-height: normal;
    }

    .hero-details br {
        display: none;
    }

    .hero-section {
        margin: 0;
    }

    .hero-img {
        width: 2rem;
        height: 2rem;
    }

    .hero-details {
        flex-shrink: 10;
    }
}


.works-mobile {
    display: none;
}

.work-container {
    justify-content: space-between;
    min-height: 15rem;
    margin-bottom: 2rem;
}

.work-tabs {
    width: 15rem;
  
}

.work-tabs li {
    padding: 0.8rem;
    border-left: 1px solid var(--nord2);
    font-weight: 500;
    cursor: pointer;
    transition: 0.2s;
}

.work-tabs li:hover { 
    background-color: #00c8ff07;

}


li.active-work{
   background-color: #00c8ff11 !important;
   border-color: var(--frost2);
}

li.active-work  p{
    color: #84e4ff;
    
}

.work-details {
    width: 25rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-right: 1rem;
}

.work-details ul {
    color: var(--dark-text);
    position: relative;
    left: 1rem;
}

.work-details ul li {
    padding: 0.5rem 0;
}

.work-details ul li {
    list-style: disc ;
    font-size: 0.9rem;
    line-height: 1.2rem;
}

.work-details p {
    font-size: 0.9rem;
    color: var(--frost2);
}

.work-details h2 {
    color: var(--dark-text);
}

